--- a/views/admin/financial/financial-student.ejs
+++ b/views/admin/financial/financial-student.ejs
@@ -81,11 +81,10 @@
                               <div class="col-md-12">
                                 <form action="" id="studentForm">
                                   <input type="hidden" id="student_school_id" value="<%= user[0].role=='school'?user[0].track_id:user[0].track_school_id %>" class="form-control" name="student_school_id" >
-                            <div class="row">
-                                  <div class="row">
+                          
                                <div class="form-group col-lg-6">
                                     <label>Annual Fee</label>
-                                    <input type="text" id="annual_fee" class="form-control" name="annual_fee" required>
+                                    <input type="text" id="annual_fee" class="form-control" name="annual_fee" disabled>
                                 </div>
                                 
                                   <div class="form-group col-lg-6">
@@ -104,18 +103,16 @@
                                     <input type="text" id="amount" class="form-control" name="amount" required>
                                 </div>
                                
-                            </div>
-                              
-                              
-                            </div>
-                            <div align="center">
+                          
+                           
+                        </form>
+                              </div>
+                               <div align="center">
                                <button class="	btn btn-success waves-effect waves-light "
 															data-callback="onSubmit" id="saveStudent" data-action="submit">
 															pay
 														</button>
                             </div>
-                        </form>
-                              </div>
                            </div>
                         </div>
                         <div class="modal-footer">
@@ -136,7 +133,7 @@
                      <div class="modal-content">
                         <div class="modal-header modal-header-primary">
                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                           <h3><i class="fa fa-plus m-r-5"></i> View Student Details</h3>
+                           <h3><i class="fa fa-plus m-r-5"></i> View Payment Details</h3>
                         </div>
                         <div class="modal-body">
                          
@@ -166,8 +163,55 @@ document.addEventListener("click", function(event) {
     const target = event.target;
   if (target.classList.contains("viewBtn")) {
         viewStudentPayment(target.dataset.id);
+    }else if (target.classList.contains("addBtn")) {
+        addPayment(target.dataset.id,target.dataset.annualfee);
     }
 });
+
+
+   function addPayment(studentPaymentId,fee) {
+    try {
+      $("#addStudentPayment-lg").modal("toggle");
+      $("#annual_fee").val(fee);
+
+//       $.ajax({
+//          url: `/admission/view-student-byid`,
+//          type: "post",
+//          data:{facultyPaymentId:facultyPaymentId},
+//          dataType: "json",
+//          cache: false,
+//          beforeSend: function() {
+//           $('#loader').removeClass('hidden')
+//              },
+//          success: function (data) {
+//     console.log(data);
+//            let formDetails = ``;
+//        if(data.length>0){
+//  for(let i=0; i<data.length; i++){
+//     formDetails += `<table class="table table-bordered table-striped"> 
+//        <tr><td>Salery</td><td>${data[i].exam_name}</td></tr>
+//        <tr><td>Paid Amount</td><td>${data[i].exam_mode}</td></tr>
+//        <tr><td>Date</td><td>${data[i].exam_type}</td></tr>
+//         <tr><td>Status</td><td>${data[i].exam_level}</td></tr>
+//        </table> </br></br></br>`;
+//  }
+//              $("#viewFacultyDiv").html(formDetails);
+//        }else{
+//           $("#viewFacultyDiv").html(`This Candidate has not any Transaction History`);
+//        }
+          
+//         },
+//           complete: function(){
+//                       $('#loader').addClass('hidden')
+//                       },
+//       });
+    } catch (err) {
+      console.error(err);
+    }
+  }        
+
+       
+
 function viewStudentPayment(studentPaymentId) {
     try {
      
