--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -198,6 +198,20 @@
                      </a>
                   </li>
                   <% } %>
+                   <li class="treeview">
+                     <a href="#">
+                     <i class="fa fa-shopping-basket"></i><span>Document Module</span>
+                     <span class="pull-right-container">
+                     <i class="fa fa-angle-left pull-right"></i>
+                     </span>
+                     </a>
+                     <ul class="treeview-menu">
+                        
+                        <li><a href="/report/certificate-render">Certificate</a></li>
+                       
+                        
+                     </ul>
+                  </li>
                    <li>
                      <a href="/download/view-download">
                      <i class="fa fa-file-text"></i> <span>Download Center</span>
