--- a/views/admin/leave-tracker/leave-student-tracker.ejs
+++ b/views/admin/leave-tracker/leave-student-tracker.ejs
@@ -38,25 +38,26 @@
                         </div>
                         <div class="panel-body">
                             <%- include('../../partials/message') %>
-                            <% if(user[0].role==="school"){ %>
+                          
 					 <div class="row"> 
  <div class="col-md-6 text-left">
+     <% if(user[0].role==="school" || user[0].role==="faculty" || user[0].role==="student"){ %>
 								 <input type="checkbox" class='checkall' id='checkall'> &nbsp;&nbsp; <input type="button" class="btn-sm btn-danger" id="multDel"  value='Check All & Delete' >
-
+ <% } %>
                
 				
             </div>
            
             <div class="col-md-6 text-right">
- 
+  <% if(user[0].role==="student"){ %>
                                  <a href="#" class="btn btn-add" data-toggle="modal" data-target="#addLeave-lg"><i class="fa fa-plus"></i>Apply For Leave</a>  
-                                 
+                          <% } %>         
                              
             </div>
 			<br>
         </div>
 
-        <% } %>
+       
 		<br>
 
 					<div class="table-responsive">
@@ -231,7 +232,7 @@
          =====================================================================-->
    <%- include('../../partials/footer-script') %>
 
-   <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
+   <script type="text/javascript" language="javascript">
 
 
      document.addEventListener("click", function(event) {
@@ -519,6 +520,7 @@ var dataTable = $('#sample_data').DataTable({
 	],
 		createdRow:function(row, data, rowIndex)
 		{
+         // console.log(data);
 			$.each($('td', row), function(colIndex){
 				if(colIndex == 2)
 				{
